[package]
name = "rust-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wol-rs = "1"
serde = "1.0"
url = "2.2"
serde_json = "1.0"
tungstenite = { version = "0.20.0", features = ["native-tls"] }

[[bin]]
name = "rust-node"
path = "main.rs"
